# keras-vision

./: .gitignore  Readme.md  mobile_vit_v2.ipynb  pyproject.toml  requirements.txt  setup.py
examples/: fastvit.ipynb  mobile_vit_v1.ipynb
keras_vision/: __init__.py
keras_vision/MobileViT_v1/: BaseLayers.py  __init__.py  base_layers.py  configs.py  mobile_vit_v1.py  mobile_vit_v1_block.py  multihead_self_attention_2D.py  utils.py
keras_vision/MobileViT_v2/: __init__.py  base_layers.py  linear_attention.py  mobile_vit_v2.py  mobile_vit_v2_block.py  utils.py
keras_vision/fastvit/: __init__.py  base_layers.py  conv_ffn.py  fastvit.py  mobileone.py  multihead_self_attention.py  rep_cpe.py  replknet.py  squeeze_excite.py
weight_porting_notebooks/: porting_MobileVIT_v1.ipynb  porting_MobileVIT_v2.ipynb
weight_porting_notebooks/fastvit/: porting_fastvit.ipynb  porting_fastvit_fused.ipynb  porting_fastvit_fused_kd.ipynb  porting_fastvit_kd.ipynb  weight_porting_test_one_by_one.ipynb  weight_porting_test_one_by_one_pytorch.ipynb
