[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keras-vision"
version = "0.6.0"
description = "Building Vision models in Keras3 for framework-agnostic training and inference."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"

authors = [{ name = "Vaibhav Singh", email = "vaibhav.singh.3001@gmail.com" }]

urls = { "Homepage" = "https://github.com/veb-101/keras-vision" }

license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["keras3", "tensorflow", "Jax", "PyTorch", "Vision"]

dependencies = ["keras>=3.3.3", "numpy"]

[tool.setuptools.packages.find]
# In your `setup.py`, you had `find_packages()`. This line achieves the same.
where = ["."]
